2019-07-24 Shahzad Muzaffar  <@smuzaffar>
	V05-08-60: Added emit-llvm build rule

2019-07-03 Shahzad Muzaffar  <@smuzaffar>
	V05-08-59: Added project level hooks
	- Allow to run extra rules for various projects

2019-06-21 Shahzad Muzaffar  <@smuzaffar>
	V05-08-58: Add rootrflx dependency for packages with lcgdicts.

2019-06-18 Shahzad Muzaffar  <@smuzaffar>
	V05-08-57: Set BIGOBJ flags from top-level makefile.

2019-06-17 Shahzad Muzaffar  <@smuzaffar>
	V05-08-55: Pass full tmp directory path to avoid following errors
	grep: tmp/arch/package_match.regex: No such file or directory
	V05-08-56: Disable UBSAN flags for Boost Serialization source files.
	https://github.com/cms-sw/cmssw/issues/26669

2019-06-11 Shahzad Muzaffar  <@smuzaffar>
	V05-08-53: Create symlink for biglib PCMs during patch release build.
	V05-08-54: Bug fix: use FULL_RELEASE_FOR_A_PATCH for full release path
	for patch releases.

2019-06-07 Shahzad Muzaffar  <@smuzaffar>
	V05-08-52: Create symlink for biglib PCMs.

2019-05-24 Shahzad Muzaffar  <@smuzaffar>
	V05-08-51: Allow to drop GENREFLEX_ARGS via BuildFile.
	Fixed buildrules to fail if genreflex fails.

2019-05-18 Shahzad Muzaffar  <@smuzaffar>
	V05-08-50: Added symlinks under biglib directory for PCMs which are part of
	biglib plugins

2019-05-16 Shahzad Muzaffar  <@smuzaffar>
	V05-08-38: Fixed qoutation for compile_commands.json e.g. now it dumps
	  -DPROJECT_NAME='\"CMSSW\"'
	instead of
	  -DPROJECT_NAME=\"CMSSW\"
	to avoid compilation errors during code-checks
	L1MuGMTParametersOnlineProducer.cc:118:65: error: expected ')' [clang-diagnostic-error]
		edm::LogInfo("No CMSSW version set in database, accepting " PROJECT_VERSION);                                                                ^
	note: expanded from here

2019-05-14 Shahzad Muzaffar  <@smuzaffar>
	V05-08-37: Fixes for CXXModules, Optionally include CXXModules.mk to
	build cxxmodules for selected packages.

2019-05-10 Shahzad Muzaffar  <@smuzaffar>