@@ -114,16 +114,6 @@ else
 define update_edm_class_version
 endef
 endif
-ifeq ($(strip $(NO_CAPABILITIES)),)
-define check_edm_class_version
-  $(call update_edm_class_version,$1,$2,$3,$4) && for x in $2; do \
-    $(CMD_echo) ">> Checking EDM Class Version for $$x in $(@F)" &&\
-    $(VERB_ECHO) $(EDM_CHECK_CLASS_VERSION_SCRIPT) -l $@ -x $$x &&\
-    ((cd $(LOCALTOP)/$3 && $(EDM_TOOLS_PREFIX) $(EDM_CHECK_CLASS_VERSION_SCRIPT) -l $(@F) -x $(LOCALTOP)/$$x) || ($(CMD_echo) "$(EDM_CHECKSUM_HELP_MSG)" && $(call delete_plugin_build_prod,$(3),$(4)) && exit 1)) ;\
-  done &&\
-  $(CMD_echo) "@@@@ ----> OK  EDM Class Version "
-endef
-else
 define check_edm_class_version
   $(call update_edm_class_version,$1,$2,$3) && for x in $2; do \
     $(CMD_echo) ">> Checking EDM Class Version for $$x in $(@F)" &&\
@@ -132,28 +122,18 @@ define check_edm_class_version
   done &&\
   $(CMD_echo) "@@@@ ----> OK  EDM Class Version "
 endef
-endif
 else
 define check_edm_class_version
 endef
 endif
 
 ifneq ($(strip $(EDM_CHECK_CLASS_TRANSIENTS)),)
-ifeq ($(strip $(NO_CAPABILITIES)),)
-define check_edm_class_transients
-  && $(CMD_echo) ">> Checking EDM Class Transients in $(@F)" &&\
-  $(VERB_ECHO) $(EDM_CHECK_CLASS_TRANSIENTS_SCRIPT) -l $@ $(foreach r,$2,-f $r) &&\
-  ((cd $(LOCALTOP)/$3 && $(EDM_TOOLS_PREFIX) $(EDM_CHECK_CLASS_TRANSIENTS_SCRIPT) -l $(@F) $(foreach r,$2,-f $(LOCALTOP)/$r)) || ($(call delete_plugin_build_prod,$(3),$(4)) && exit 1)) &&\
-  $(CMD_echo) "@@@@ ----> OK  EDM Class Transients "
-endef
-else
 define check_edm_class_transients
   && $(CMD_echo) ">> Checking EDM Class Transients in $(@F)" &&\
   $(VERB_ECHO) $(EDM_CHECK_CLASS_TRANSIENTS_SCRIPT) -l $@ $(foreach r,$2,-f $r) &&\
   ((cd $(LOCALTOP)/$3 && $(EDM_TOOLS_PREFIX) $(EDM_CHECK_CLASS_TRANSIENTS_SCRIPT) -l $(@F) $(foreach r,$2,-f $(LOCALTOP)/$r)) || ($(call delete_plugin_build_prod,$(3)) && exit 1)) &&\
   $(CMD_echo) "@@@@ ----> OK  EDM Class Transients "
 endef
-endif
 else
 define check_edm_class_transients
 endef
