@@ -1,3 +1,4 @@
+LCGDICT_FILE_PREFIX = $(1)_
 TOP_LEVEL_VARIABLES+=LCGDICT
 ifneq ($(strip $(wildcard $(SCRAM_CONFIGDIR)/SCRAM/GMake/CXXModules.mk)),)
 -include $(SCRAM_CONFIGDIR)/SCRAM/GMake/CXXModules.mk
@@ -82,8 +83,8 @@ endef
 define generate_lcgdict
   $(startlog_$(2))[ -d $(@D) ] ||  $(CMD_mkdir) -p $(@D) && $(CMD_rm) -f $@ &&\
   $(CMD_echo) ">> Building LCG reflex dict from header file $(patsubst $(LOCALTOP)/%,%,$4)" &&\
-  $(VERB_ECHO) $(GENREFLEX) $(4) -s $(3) -o $@ $($(6)_GENREFLEX_ARGS) $(if $(strip $(GENERATE_ROOT_PCMS)),--rootmap=$(7)/$(basename $(@F)).rootmap --rootmap-lib=$(MODULE_PREFIX)$(1).$(SHAREDSUFFIX) $(call Tool_DependencyPCMS,$1),$(GENREFLEX_GCCXMLOPT) --gccxmlpath=$(GCCXML_BASE)/bin) --capabilities=$(notdir $(5)) $(GENREFLEX_CPPFLAGS) $(call AdjustFlags,$1,LCGDICT,CPPFLAGS) &&\
-  (($(SCRAM_GENREFLEX_PREFIX) $(GENREFLEX) $(4) -s $(3) -o $@ $($(6)_GENREFLEX_ARGS) $(if $(strip $(GENERATE_ROOT_PCMS)),--rootmap=$(7)/$(basename $(@F)).rootmap --rootmap-lib=$(MODULE_PREFIX)$(1).$(SHAREDSUFFIX) $(call Tool_DependencyPCMS,$1),$(GENREFLEX_GCCXMLOPT) --gccxmlpath=$(GCCXML_BASE)/bin) --capabilities=$(notdir $(5)) $(GENREFLEX_CPPFLAGS) $(call AdjustFlags,$1,LCGDICT,CPPFLAGS) &&\
+  $(VERB_ECHO) $(GENREFLEX) $(4) -s $(3) -o $@ $($(6)_GENREFLEX_ARGS) --rootmap=$(7)/$(basename $(@F)).rootmap --rootmap-lib=$(MODULE_PREFIX)$(1).$(SHAREDSUFFIX) $(call Tool_DependencyPCMS,$1) --capabilities=$(notdir $(5)) $(GENREFLEX_CPPFLAGS) $(call AdjustFlags,$1,LCGDICT,CPPFLAGS) &&\
+  (($(SCRAM_GENREFLEX_PREFIX) $(GENREFLEX) $(4) -s $(3) -o $@ $($(6)_GENREFLEX_ARGS) --rootmap=$(7)/$(basename $(@F)).rootmap --rootmap-lib=$(MODULE_PREFIX)$(1).$(SHAREDSUFFIX) $(call Tool_DependencyPCMS,$1) --capabilities=$(notdir $(5)) $(GENREFLEX_CPPFLAGS) $(call AdjustFlags,$1,LCGDICT,CPPFLAGS) &&\
     if [ `$(CMD_ls) $(@D)/*.pcm | $(CMD_grep) -v '/$(1)_x' | $(CMD_grep) -v /_Builtin_intrinsics.pcm | wc -l` -gt 0 ] ; then \
       $(CMD_echo) "*** ERROR:$1: Generated PCM for other packages" ; $(CMD_ls) $(@D)/*.pcm | $(CMD_grep) -v '/$(1)_x' ; \
     fi &&\
@@ -104,24 +105,6 @@ define link_lib_capabilities
 endef
 
 #safename,hfiles,defxmlfiles,prodstore,genreflexargs,Cababilities
-ifeq ($(strip $(NO_CAPABILITIES)),)
-define LCGDict
-$(eval $(call LCGDictHeaders,$1,$2,$3,$5,$6))
-$(eval $(call AddLCGDictRule,$(1),$($1_lcg_header),$($1_lcg_def_xml),$(1)$(6),a,$(4),$($(1)_LCGDICTS)))
-$(eval $(call AddSealCapabilitiesRule,$(1),$(1)$(6),a/))
-$(WORKINGDIR)/rootmaps/$1: $(foreach x,$($1_LCGDICTS),$(WORKINGDIR)/rootmaps/$1_$(x))
-	@$(CMD_touch) $$@
-ifneq ($(strip $(6)),)
-ALL_CLASS_VERSION_RULES += $($(1)_objdir)/updateclassversion
-ifneq ($(strip $(UPDATE_CLASSVERSION)),)
-all_$(1)       += $($(1)_objdir)/updateclassversion
-$($(1)_objdir)/updateclassversion: $($(1)_objdir)/$(MODULE_PREFIX)$(1)$(6).$(SHAREDSUFFIX)
-	@$(CMD_touch) $$@
-endif
-$$(eval $$(call LCGDictLibRule,$1,$4,$6,$3,$($(1)_objdir),$$($(1)$(6)_objs)))
-endif
-endef
-else
 define LCGDict
 $(eval $(call LCGDictHeaders,$1,$2,$3,$5,$6))
 $(1)_CLASSES_DEF_XML:=$3
@@ -135,7 +118,6 @@ $($(1)_objdir)/updateclassversion: $($(1)_objdir)/$(MODULE_PREFIX)$(1).$(SHAREDS
 	@$(CMD_touch) $$@
 endif
 endef
-endif
 
 ##safename,hfiles,defxmlfiles,genreflexargs,name
 define LCGDictHeaders
@@ -201,7 +183,6 @@ $3: $4
 endif
 $(2)r_header:=$3
 $(eval $(call AddBigObjLCGDICTRule,$1,$(6)/$(2),$(7),$(2)r_rdict.pcm))
-ifeq ($(strip $(GENERATE_ROOT_PCMS)),yes)
 ifeq ($(strip $($(1)_CXXMODULES)),1)
 all_$(1)  += $(7)/$(2)r.pcm
 ALL_PCMS+=$(7)/$(2)r.pcm
@@ -235,14 +216,6 @@ $(WORKINGDIR)/rootmaps/$(2): $(7)/$(2)r.rootmap
 $(7)/$(2)r.rootmap: $($(1)_objdir)/$(6)/$(2)r.cc
 	@$(CMD_echo) "01:$(CMD_rm) -f $(7)/$(2)r* $(WORKINGDIR)/rootmaps/$(1)" > $$(call AutoCleanFile,$$<,lcgdict)
 	@[ -f $$< ] || $(CMD_rm) -f $$@
-endif
-ifeq ($(strip $(NO_CAPABILITIES)),)
-ifneq ($1,$5)
-$(5)_seal_cap    += $($(1)_objdir)/$(6)/$(2)i.cc
-$($(1)_objdir)/$(6)/$(2)i.cc: $($(1)_objdir)/$(6)/$(2)r.cc
-	@[ -f $$< ] || $(CMD_rm) -f $$@
-endif
-endif
 endef
 
 $(WORKINGDIR)/rootmaps/%:
